# SimpleContainersLibrary

./: .gitmodules  .travis.yml  CMakeLists.txt  main.cpp
CMake/: SCLConfig.cmake.in  UseSCL.cmake.in  fetch_googletest.cmake  git_submodule_build.cmake  git_submodule_update.cmake
scl/: array.hpp  containers_base.hpp  cp_string.hpp  function_traits.hpp  math.hpp  ring.hpp  scl.hpp  string.hpp  traits.hpp  types.hpp  vector.hpp  vector2.hpp  vector3.hpp
tests/: ArrayTests.cpp  CMakeLists.txt  FormatTest.cpp  MathVectorTests.cpp  RingTests.cpp  StringTests.cpp  VectorTests.cpp
